2022年7月4日，v4.7.4版本发布: 1、更新logback组件为 1.2.11 2、图片接口加入对特殊符号转义 (XSS)
2022年7月1日，v4.7.3版本发布:
1、对OFD生成的文件 字体报错修复
2、添加备案信息
3、更新CAD组件
4、其他功能修复

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>cn.keking</groupId>
         <artifactId>filepreview</artifactId>
-        <version>4.7.2</version>
+        <version>4.7.4</version>
     </parent>
 
     <artifactId>kkFileView</artifactId>
@@ -47,7 +47,39 @@
     <artifactId>sevenzipjbinding-all-platforms</artifactId>
     <version>16.02-2.01</version>
        </dependency>
-	   
+	       <!-- log4j -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${log4j2.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j2.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-to-slf4j</artifactId>
+            <version>${log4j2.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>${log4j2.version}</version>
+            <scope>test</scope>
+        </dependency>
+         <dependency>  
+    <groupId>ch.qos.logback</groupId>  
+    <artifactId>logback-classic</artifactId>  
+    <version>${logback.version}</version>  
+  </dependency>  
+  <dependency>  
+    <groupId>ch.qos.logback</groupId>  
+    <artifactId>logback-core</artifactId>  
+    <version>${logback.version}</version>  
+  </dependency>  
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -130,42 +162,36 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>2.17.2</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-to-slf4j -->
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-to-slf4j</artifactId>
-            <version>2.17.2</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.17.2</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j-impl</artifactId>
-            <version>2.17.2</version>
-            <scope>test</scope>
-        </dependency>
+  
         <!-- ofd转换pdf -->
-      <dependency>
-    <groupId>org.ofdrw</groupId>
-    <artifactId>ofdrw-converter</artifactId>
-    <version>1.17.19</version>
-</dependency>
- <dependency>
-    <groupId>org.ofdrw</groupId>
-    <artifactId>ofdrw-core</artifactId>
-    <version>1.17.19</version>
-</dependency>
+        <dependency>
+            <groupId>org.ofdrw</groupId>
+            <artifactId>ofdrw-converter</artifactId>
+            <version>1.17.19</version>
+               <scope>com</scope>
+             <systemPath>${basedir}/lib/ofdrw-converter-1.17.19.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.ofdrw</groupId>
+            <artifactId>ofdrw-core</artifactId>
+            <version>1.17.19</version>
+             <scope>com</scope>
+             <systemPath>${basedir}/lib/ofdrw-core-1.17.19.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.ofdrw</groupId>
+            <artifactId>ofdrw-pkg</artifactId>
+            <version>1.17.19</version>
+             <scope>com</scope>
+             <systemPath>${basedir}/lib/ofdrw-pkg-1.17.19.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.ofdrw</groupId>
+            <artifactId>ofdrw-reader</artifactId>
+            <version>1.17.19</version>
+             <scope>com</scope>
+             <systemPath>${basedir}/lib/ofdrw-reader-1.17.19.jar</systemPath>
+        </dependency>
   
         <dependency>
             <groupId>commons-cli</groupId>
