--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -138,7 +138,7 @@ watermark.angle = ${WATERMARK_ANGLE:10}
 tif.preview.type = ${KK_TIF_PREVIEW_TYPE:tif}
 
 #OFD类型 PDF模式预览 pdf  svg  ofd
-OFD.preview.type = svg
+OFD.preview.type = pdf
 
 # 备案信息
 BeiAn = 
